--- a/config/boards/shields/moNa2/moNa2_R.conf
+++ b/config/boards/shields/moNa2/moNa2_R.conf
@@ -32,6 +32,7 @@ CONFIG_PMW3610_AUTOMOUSE_TIMEOUT_MS=700
 CONFIG_PMW3610_SMART_ALGORITHM=y
 
 CONFIG_PMW3610_ADJUSTABLE_MOUSESPEED=y
+CONFIG_PMW3610_MOVEMENT_THRESHOLD=5
 
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
